--- a/Android_layout_xml_viewer/res/layout/activity_list.xml
+++ b/Android_layout_xml_viewer/res/layout/activity_list.xml
@@ -4,35 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:text="@string/Btn1Label" />
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_toRightOf="@id/button1"
-        android:text="@string/Btn2Label" />
-
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_toRightOf="@id/button2"
-        android:text="@string/Btn3Label" />
-
     <ListView
         android:id="@+id/listView1"
         android:layout_width="200dip"
         android:layout_height="fill_parent"
-        android:layout_above="@id/button1"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true" >
     </ListView>
@@ -45,6 +20,7 @@
         android:layout_alignParentTop="true"
         android:layout_toRightOf="@id/listView1"
         android:ems="10"
+        android:gravity="center_vertical|top"
         android:inputType="textMultiLine" >
 
         <requestFocus />
